--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,3 +1,22 @@
-<h1>Contact Page</h1>
+<div>
 
-{{outlet}}
+  <br/><br/>
+
+
+  <div class="form-horizontal form-group form-group-lg row">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
+      {{input type="email" value=emailAddress class="form-control" placeholder="Please type your e-mail address." autofocus="autofocus"}}
+      {{textarea type="text" value=texto class="form-control" rows=5 placeholder="Your message here"}}
+    </div>
+    <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
+        <button class="btn btn-primary btn-lg btn-block" disabled={{isDisabled}} {{action 'saveInvitation'}}>Send message</button>
+    </div>
+  </div>
+
+  <!--Mostramos el mensaje de respuesta. La clase es Bootstrap-->
+  {{#if responseMessage}}
+    <div class="alert alert-success">{{responseMessage}}</div>
+  {{/if}}
+
+  <br/><br/>
+</div>
