--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -5,11 +5,11 @@
 
   <div class="form-horizontal form-group form-group-lg row">
     <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
-      {{input type="email" value=emailAddress class="form-control" placeholder="Please type your e-mail address." autofocus="autofocus"}}
-      {{textarea type="text" value=texto class="form-control" rows=5 placeholder="Your message here"}}
+      {{input type="email" value=model.emailAddress class="form-control" placeholder="Please type your e-mail address." autofocus="autofocus"}}
+      {{textarea type="text" value=model.texto class="form-control" rows=5 placeholder="Your message here"}}
     </div>
     <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-1 col-md-5 col-md-offset-2">
-        <button class="btn btn-primary btn-lg btn-block" disabled={{isDisabled}} {{action 'saveInvitation'}}>Send message</button>
+        <button class="btn btn-primary btn-lg btn-block" disabled={{isDisabled}} {{action 'saveContact' model}}>Send message</button>
     </div>
   </div>
 
