--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -24,6 +24,7 @@
           </a>
           <ul class="dropdown-menu">
             {{#link-to 'admin.invitations' tagName="li"}}<a href="">Invitations</a>{{/link-to}}
+            {{#link-to 'admin.contacts' tagName="li"}}<a href="">Contacts</a>{{/link-to}}
           </ul>
         </li>
       </ul>
